# emulebb-rust

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  THIRD-PARTY-LICENSES.md  deny.toml  emulebb-rust-settings.example.toml  emulebb-rust.example.toml
crates/emulebb-core/: Cargo.toml
crates/emulebb-core/src/: app_api.rs  callback_tracker.rs  categories.rs  category_api.rs  category_runtime.rs  core_settings.rs  core_state.rs  delivery.rs  diag_kad_event.rs  diag_sched.rs  direct_download_runtime.rs  disk_guard.rs  download_source_registry.rs  ed2k_buddy_reask.rs  ed2k_dead_source_list.rs  ed2k_direct_download_types.rs  ed2k_download_retry.rs  ed2k_net_drivers.rs  ed2k_publish_diagnostics.rs  ed2k_source_batch.rs  ed2k_sources.rs  friend_api.rs  hostname_lookup.rs  kad_buddy.rs  kad_callback_initiator.rs  kad_control.rs  kad_hello.rs  kad_passive_replay.rs  kad_public_search.rs  kad_publish_diagnostics.rs  kad_publish_schedule.rs  kad_routing_maintenance.rs  kad_snoop_entry.rs  kad_tcp_firewall_check.rs  kad_udp_firewall_check.rs  lib.rs  lifecycle.rs  local_search_response.rs  network_api.rs  network_binding.rs  (+26 more)
crates/emulebb-core/src/download_source_registry/: tests.rs
crates/emulebb-core/src/ed2k_sources/: tests.rs
crates/emulebb-core/src/search_queue/: tests.rs
crates/emulebb-core/src/shared_directories/: tests.rs
crates/emulebb-core/src/tests/: core_config.rs  download_scheduler.rs  download_source_policy.rs  kad_protocol.rs  kad_publish_candidates.rs  kad_publish_runtime.rs  search_servers.rs  transfer_lifecycle.rs
crates/emulebb-core/tests/: category_persistence.rs  contract_serialization.rs  kad_swarm.rs  long_path_shared_dir.rs  profile_persistence.rs  search_persistence.rs  shared_dir_monitor_e2e.rs  shared_directories_persistence.rs  vpn_failclosed.rs  vpn_guard_runtime.rs  vpn_leak_egress.rs
crates/emulebb-core/tests/kad_swarm_support/: fixtures.rs  mod.rs  node.rs  transfer.rs
crates/emulebb-daemon/: Cargo.toml  build.rs
crates/emulebb-daemon/src/: bind_config.rs  lib.rs  log_layer.rs  tests.rs  vpn_guard.rs  vpn_guard_monitor.rs
crates/emulebb-ed2k/: Cargo.toml
crates/emulebb-ed2k/src/: advertised_ports.rs  advertised_udp_port.rs  ban_store.rs  buddy_socket.rs  config.rs  diag_event.rs  disk_space.rs  ed2k_client_udp.rs  ed2k_client_udp_obfuscation.rs  ed2k_server.rs  ed2k_tcp.rs  ed2k_transfer.rs  ipfilter.rs  kad_firewall.rs  lib.rs  long_path.rs  nat.rs  networking.rs  public_ip.rs  public_ip_probe.rs  reachability.rs  shared_publish_rank.rs  stun.rs
crates/emulebb-ed2k/src/ed2k_client_udp/: buddy_relay.rs  codec.rs  dispatch.rs  dump.rs  mod.rs  outbound.rs  reciprocity.rs  registry.rs  runtime.rs  service.rs  source_set.rs  state.rs
crates/emulebb-ed2k/src/ed2k_server/: active_callback.rs  active_keyword.rs  active_source.rs  active_source_udp.rs  background.rs  diagnostics.rs  flags.rs  loop_runtime.rs  obfuscation.rs  packet_codec.rs  packet_handler.rs  result_decoder.rs  search_expr.rs  server_description.rs  server_description_poll.rs  server_entry.rs  server_events.rs  server_met.rs  server_status.rs  session.rs  session_driver.rs  source_utils.rs  startup.rs  tag_codec.rs  tests.rs  types.rs  udp.rs  udp_runtime.rs
crates/emulebb-ed2k/src/ed2k_tcp/: aich_salvage.rs  buddy_link.rs  client_software.rs  diag_event.rs  dump.rs  firewall_helper.rs  hello.rs  hello_buddy.rs  hello_gpl.rs  hello_miscoptions.rs  identity.rs  identity_tests.rs  obfuscation.rs  transport.rs  upload_promote.rs
crates/emulebb-ed2k/src/ed2k_transfer/: aich_recovery.rs  aich_tree.rs  aich_trust.rs  block_bitmap.rs  callback.rs  catalog.rs  corruption_blackbox.rs  credit_ledger.rs  deliver.rs  diag_bad_peer.rs  diag_sched.rs  download_activity.rs  download_coordinator.rs  download_pick.rs  download_throttle.rs  hashset.rs  ich_salvage.rs  inbound_admission.rs  ingest.rs  manifest.rs  metadata.rs  model.rs  piece_store.rs  reask_reciprocity.rs  reload_index.rs  requested_block.rs  salvage.rs  shared_catalog.rs  source_exchange.rs  store.rs  tests.rs  transfer_sql.rs  upload.rs  upload_cooldown.rs  upload_queue.rs
crates/emulebb-index/: Cargo.toml
crates/emulebb-index/src/: kad_publish_snapshot.rs  kad_search_expr.rs  kad_store.rs  lib.rs  snoop_model.rs  snoop_queue.rs
crates/emulebb-kad-dht/: Cargo.toml
crates/emulebb-kad-dht/src/: bootstrap.rs  error.rs  lib.rs  node.rs  publish.rs  search.rs  traversal.rs  types.rs
crates/emulebb-kad-net/: Cargo.toml
crates/emulebb-kad-net/src/: diag_event.rs  error.rs  lib.rs  obfuscation.rs  rate_limit.rs  rpc.rs  socket_opts.rs  tracker.rs  transport.rs  wire_dump.rs
crates/emulebb-kad-proto/: Cargo.toml
crates/emulebb-kad-proto/src/: constants.rs  error.rs  hash.rs  lib.rs  node_id.rs  packet.rs  tag.rs
crates/emulebb-kad-routing/: Cargo.toml
crates/emulebb-kad-routing/src/: bin.rs  contact.rs  error.rs  lib.rs  maintenance.rs  table.rs  zone.rs
crates/emulebb-metadata/: Cargo.toml
crates/emulebb-metadata/src/: identity_model.rs  identity_store.rs  kad_publish_model.rs  kad_publish_store.rs  lib.rs  migrations.rs  model.rs  peer_model.rs  peer_store.rs  profile_model.rs  profile_store.rs  schema.rs  schema.sql  search_model.rs  search_store.rs  store.rs  text.rs  transfer_model.rs  transfer_store.rs
crates/emulebb-miniupnpc/: Cargo.toml
crates/emulebb-miniupnpc-sys/: Cargo.toml  build.rs
crates/emulebb-miniupnpc-sys/src/: lib.rs
crates/emulebb-miniupnpc/src/: lib.rs
crates/emulebb-preferences/: Cargo.toml
crates/emulebb-preferences/src/: lib.rs
crates/emulebb-rest/: Cargo.toml
crates/emulebb-rest/src/: dto.rs  envelope.rs  lib.rs  log_buffer.rs  responses.rs  route_body_metadata.rs  route_metadata.rs  routes.rs  webui.rs
crates/emulebb-rest/tests/: shared_files_contract.rs
crates/emulebb-rust-ui/: Cargo.toml
crates/emulebb-rust-ui/src/: api.rs  app.rs  lib.rs  main.rs  models.rs  presentation.rs  rendering.rs  ui_state.rs  worker.rs
crates/emulebb-rust-ui/ui/: app.slint
crates/emulebb-tools/: Cargo.toml
crates/emulebb-tools/src/: lib.rs  nat_diagnostic.rs
(+376 files in other folders)
