[workspace]
members = [
    "crates/emulebb-core",
    "crates/emulebb-daemon",
    "crates/emulebb-ed2k",
    "crates/emulebb-index",
    "crates/emulebb-kad-dht",
    "crates/emulebb-kad-net",
    "crates/emulebb-kad-proto",
    "crates/emulebb-kad-routing",
    "crates/emulebb-miniupnpc",
    "crates/emulebb-miniupnpc-sys",
    "crates/emulebb-rest",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.0.3"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
binrw = "0.14"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
toml = "0.9"
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
