[workspace]
members = [
    "crates/emulebb-core",
    "crates/emulebb-daemon",
    "crates/emulebb-ed2k",
    "crates/emulebb-index",
    "crates/emulebb-kad-dht",
    "crates/emulebb-kad-net",
    "crates/emulebb-kad-proto",
    "crates/emulebb-kad-routing",
    "crates/emulebb-metadata",
    "crates/emulebb-miniupnpc",
    "crates/emulebb-miniupnpc-sys",
    "crates/emulebb-rest",
    "crates/emulebb-rust-ui",
    "crates/emulebb-tools",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "GPL-2.0"
rust-version = "1.97"
version = "0.1.0-beta.1"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
binrw = "0.14"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
embed-manifest = "1.5"
futures-util = "0.3"
if-addrs = "0.13"
ipconfig = "0.3"
notify = "6"
notify-debouncer-full = "0.3"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
slint = "1.17.1"
slint-build = "1.17.1"
socket2 = "0.6"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
toml = "0.9"
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-normalization = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = "2"
