[workspace]
members = [
    "crates/emulebb-core",
    "crates/emulebb-daemon",
    "crates/emulebb-ed2k",
    "crates/emulebb-index",
    "crates/emulebb-kad-dht",
    "crates/emulebb-kad-net",
    "crates/emulebb-kad-proto",
    "crates/emulebb-kad-routing",
    "crates/emulebb-metadata",
    "crates/emulebb-miniupnpc",
    "crates/emulebb-miniupnpc-sys",
    "crates/emulebb-rest",
    "crates/emulebb-rust-ui",
    "crates/emulebb-tools",
]
resolver = "2"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
undocumented_unsafe_blocks = "deny"

[workspace.package]
edition = "2024"
license = "GPL-2.0-only"
publish = false
rust-version = "1.97"
version = "0.1.0-beta.1"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
binrw = "0.15"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
cc = "1"
embed-manifest = "1.5"
encoding_rs = "0.8"
flate2 = "1"
fs4 = "0.13"
futures-util = "0.3"
hex = "0.4"
if-addrs = "0.13"
ipnet = "2"
ipconfig = "0.3"
md4 = "0.10"
md5 = "0.7"
notify = "6"
notify-debouncer-full = "0.3"
num-bigint = "0.4"
parking_lot = "0.12"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rsa = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
sha1 = { version = "0.10", features = ["oid"] }
sha2 = "0.10"
slint = "1.17.1"
slint-build = "1.17.1"
socket2 = "0.6"
thiserror = "1"
tempfile = "3"
tokio = "1"
tokio-stream = "0.1"
tokio-util = "0.7"
toml = "0.9"
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-normalization = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = "2"
windows-sys = "0.59"
