[package]
name = "emulebb-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local emulebb-rust application state and orchestration"

[features]
# Forwards the packet-diagnostics compile gate down to eD2K and Kad diagnostics.
packet-diagnostics = ["emulebb-ed2k/packet-diagnostics"]
# Test-only: forwards the egress-audit seam down so the RUST-FEAT-005 leak test
# (tests/vpn_leak_egress.rs) can observe P2P socket bind/pin. Never enabled in the
# daemon/release build (guarded by tools/check_rust_client_policy.py).
egress-audit = ["emulebb-ed2k/egress-audit", "emulebb-kad-dht/egress-audit"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
emulebb-ed2k = { path = "../emulebb-ed2k" }
emulebb-index = { path = "../emulebb-index" }
emulebb-kad-dht = { path = "../emulebb-kad-dht" }
emulebb-kad-proto = { path = "../emulebb-kad-proto" }
emulebb-metadata = { path = "../emulebb-metadata" }
hex = "0.4"
ipnet = "2"
md4 = "0.10"
notify.workspace = true
notify-debouncer-full.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
socket2.workspace = true
tokio.workspace = true
tokio-stream = "0.1"
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true
walkdir.workspace = true

[target.'cfg(windows)'.dependencies]
# Resolve a path's volume to its physical disk number (per-disk hashing pool) via
# IOCTL_VOLUME_GET_VOLUME_DISK_EXTENTS. Same windows-sys 0.59 as the rest of the
# workspace; raw FFI mirrors crates/emulebb-kad-net/src/socket_opts.rs.
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Ioctl",
    "Win32_System_IO",
] }

[dev-dependencies]
emulebb-kad-routing = { path = "../emulebb-kad-routing" }
serde_json.workspace = true
