[package]
name = "emulebb-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Headless emulebb-rust daemon"

[[bin]]
name = "emulebb-rust"
path = "src/bin/emulebb-rust.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
emulebb-core = { path = "../emulebb-core" }
emulebb-index = { path = "../emulebb-index" }
emulebb-rest = { path = "../emulebb-rest" }
serde.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

