[package]
name = "emulebb-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Headless emulebb-rust daemon"

[[bin]]
name = "emulebb-rust"
path = "src/bin/emulebb-rust.rs"

[features]
# Build the daemon with `--features packet-diagnostics` to compile in the
# ed2k_packet_v1 packet dump (diagnostic/live-wire builds); off by default.
packet-diagnostics = ["emulebb-core/packet-diagnostics", "emulebb-ed2k/packet-diagnostics"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
emulebb-core = { path = "../emulebb-core" }
emulebb-ed2k = { path = "../emulebb-ed2k" }
emulebb-index = { path = "../emulebb-index" }
emulebb-metadata = { path = "../emulebb-metadata" }
emulebb-rest = { path = "../emulebb-rest" }
hex = "0.4"
serde.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[build-dependencies]
embed-manifest.workspace = true

[dev-dependencies]
tempfile = "3"
