[package]
name = "emulebb-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Headless emulebb-rust daemon"

[lints]
workspace = true

[[bin]]
name = "emulebb-rust"
path = "src/bin/emulebb-rust.rs"

# Diagnostics flavor: the SAME binary built under a distinct name so it is never
# confused with the plain release exe (mirrors the MFC emulebb.exe vs
# emulebb-diagnostics.exe split). The target points at a thin shim that
# `include!`s `emulebb-rust.rs`; pointing two [[bin]] targets at one source file
# directly trips cargo's "present in multiple build targets" warning, so the shim
# gives this target its own source path. `required-features` ties the name to the
# packet-diagnostics feature, so `cargo build --bin emulebb-rust-diagnostics
# --features packet-diagnostics` emits `emulebb-rust-diagnostics.exe` directly, and
# a plain `cargo build` simply skips this target (feature off).
[[bin]]
name = "emulebb-rust-diagnostics"
path = "src/bin/emulebb-rust-diagnostics.rs"
required-features = ["packet-diagnostics"]

[features]
# Build the daemon with `--features packet-diagnostics` to compile in packet
# dumps and diag_event_v1 logs (diagnostic/live-wire builds); off by default.
packet-diagnostics = ["emulebb-core/packet-diagnostics", "emulebb-ed2k/packet-diagnostics"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
emulebb-core = { path = "../emulebb-core" }
emulebb-ed2k = { path = "../emulebb-ed2k" }
emulebb-index = { path = "../emulebb-index" }
emulebb-metadata = { path = "../emulebb-metadata" }
emulebb-rest = { path = "../emulebb-rest" }
hex.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[build-dependencies]
embed-manifest.workspace = true

[dev-dependencies]
tempfile.workspace = true
