[package]
name = "emulebb-ed2k"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ED2K transfer runtime extracted for emulebb-rust"

[features]
# Compile-time gate for the ed2k_packet_v1 packet dump (the Cargo equivalent of
# eMuleBB's EMULEBB_ENABLE_PACKET_DIAGNOSTICS #ifdef). Off by default so release
# builds compile the dump out entirely; enable for diagnostic/live-wire builds.
# When enabled, the dump is still runtime-gated by the EMULEBB_RUST_LOG_DIR env var.
packet-diagnostics = ["emulebb-kad-dht/packet-diagnostics"]
# Forwards the test-only egress-audit seam down to emulebb-kad-net (via kad-dht).
# Never enabled in a release/daemon build (see tools/check_rust_client_policy.py).
egress-audit = ["emulebb-kad-dht/egress-audit"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
emulebb-miniupnpc = { path = "../emulebb-miniupnpc" }
emulebb-metadata = { path = "../emulebb-metadata" }
emulebb-kad-proto = { path = "../emulebb-kad-proto" }
emulebb-kad-dht = { path = "../emulebb-kad-dht" }
flate2 = "1"
fs4 = "0.13"
futures-util.workspace = true
hex = "0.4"
if-addrs.workspace = true
md4 = "0.10"
md5 = "0.7"
num-bigint = "0.4"
rand.workspace = true
rsa = "0.9"
rupnp.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1 = { version = "0.10", features = ["oid"] }
socket2.workspace = true
tokio-stream = "0.1"
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
ipconfig.workspace = true

[dev-dependencies]
tempfile = "3"
