[package]
name = "emulebb-ed2k"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "ED2K transfer runtime extracted for emulebb-rust"

[lints]
workspace = true

[features]
# Compile-time gate for the ed2k_packet_v1 packet dump (the Cargo equivalent of
# eMuleBB's EMULEBB_ENABLE_PACKET_DIAGNOSTICS #ifdef). Off by default so release
# builds compile the dump out entirely; enable for diagnostic/live-wire builds.
# When enabled, the dump is still runtime-gated by the EMULEBB_RUST_LOG_DIR env var.
packet-diagnostics = ["emulebb-kad-dht/packet-diagnostics"]
# Forwards the test-only egress-audit seam down to emulebb-kad-net (via kad-dht).
# Never enabled in a release/daemon build (see tools/check_rust_client_policy.py).
egress-audit = ["emulebb-kad-dht/egress-audit"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
emulebb-miniupnpc = { path = "../emulebb-miniupnpc" }
emulebb-metadata = { path = "../emulebb-metadata" }
emulebb-kad-proto = { path = "../emulebb-kad-proto" }
emulebb-kad-dht = { path = "../emulebb-kad-dht" }
flate2.workspace = true
fs4.workspace = true
hex.workspace = true
if-addrs.workspace = true
md4.workspace = true
md5.workspace = true
num-bigint.workspace = true
parking_lot.workspace = true
rand.workspace = true
rsa.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
socket2.workspace = true
tokio-stream.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "macros", "net", "rt", "sync", "time"] }
tokio-util.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
ipconfig.workspace = true

[dev-dependencies]
tempfile.workspace = true
