[package]
name = "emulebb-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Local SQLite and FTS5 index for emulebb-rust"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
binrw.workspace = true
chrono.workspace = true
emulebb-metadata = { path = "../emulebb-metadata" }
emulebb-kad-proto = { path = "../emulebb-kad-proto" }
rusqlite.workspace = true
serde.workspace = true
