[package]
name = "emulebb-kad-dht"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Kad2 DHT operations — bootstrap, lookup, search, publish"

[features]
# Forwards the diagnostics compile-time gate down to the Kad UDP network layer.
packet-diagnostics = ["emulebb-kad-net/packet-diagnostics"]
# Forwards the test-only egress-audit seam down to emulebb-kad-net. Never enabled
# in a release/daemon build (see tools/check_rust_client_policy.py).
egress-audit = ["emulebb-kad-net/egress-audit"]

[dependencies]
emulebb-kad-proto = { path = "../emulebb-kad-proto" }
emulebb-kad-routing = { path = "../emulebb-kad-routing" }
emulebb-kad-net = { path = "../emulebb-kad-net" }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = "0.1"
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
binrw = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
