[package]
name = "emulebb-kad-net"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Kad2 network layer — UDP transport, RPC manager, obfuscation"

[features]
# Compile-time gate for Kad packet dumps and diag_event_v1 diagnostics. Runtime
# EMULEBB_RUST_LOG_DIR only selects the output directory after this feature is
# enabled by the diagnostics binary/build.
packet-diagnostics = []
# Test-only egress-audit seam: records every P2P socket's bound local address and
# read-back IP_UNICAST_IF pin so the RUST-FEAT-005 leak test can OBSERVE that no
# socket is ever bound/pinned off the tunnel. Off by default; NEVER enabled in the
# daemon or a release build (guarded by tools/check_rust_client_policy.py).
egress-audit = []

[dependencies]
emulebb-kad-proto = { path = "../emulebb-kad-proto" }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
async-trait = "0.1"
socket2 = { workspace = true, features = ["all"] }
md5 = "0.7"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Networking_WinSock"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
