[package]
name = "emulebb-kad-net"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Kad2 network layer — UDP transport, RPC manager, obfuscation"

[lints]
workspace = true

[features]
# Compile-time gate for Kad packet dumps and diag_event_v1 diagnostics. Runtime
# EMULEBB_RUST_LOG_DIR only selects the output directory after this feature is
# enabled by the diagnostics binary/build.
packet-diagnostics = []
# Test-only egress-audit seam: records every P2P socket's bound local address and
# read-back IP_UNICAST_IF pin so the RUST-FEAT-005 leak test can OBSERVE that no
# socket is ever bound/pinned off the tunnel. Off by default; NEVER enabled in the
# daemon or a release build (guarded by tools/check_rust_client_policy.py).
egress-audit = []

[dependencies]
emulebb-kad-proto = { path = "../emulebb-kad-proto" }
tokio = { workspace = true, features = ["net", "rt", "sync", "time"] }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2.workspace = true
async-trait.workspace = true
socket2 = { workspace = true, features = ["all"] }
md5.workspace = true
parking_lot.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Networking_WinSock"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "test-util"] }
