[package]
name = "emulebb-kad-proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Kad2 wire codec — packet types, tag system, NodeId"

[dependencies]
binrw = { workspace = true }
thiserror = { workspace = true }
flate2.workspace = true
encoding_rs.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Globalization"] }
