[package]
name = "emulebb-miniupnpc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Safe Rust wrapper for the eMuleBB MiniUPnPc source tree"

[dependencies]
anyhow.workspace = true
emulebb-miniupnpc-sys = { path = "../emulebb-miniupnpc-sys" }
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Networking_WinSock"] }
