[package]
name = "emulebb-miniupnpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Safe Rust wrapper for the eMuleBB MiniUPnPc source tree"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
emulebb-miniupnpc-sys = { path = "../emulebb-miniupnpc-sys" }
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Networking_WinSock"] }
