[package]
name = "emulebb-rest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "eMuleBB-compatible REST API for emulebb-rust"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
emulebb-core = { path = "../emulebb-core" }
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tower.workspace = true
tower-http.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
emulebb-index = { path = "../emulebb-index" }
