[package]
name = "emulebb-rust-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Native Slint UI for the emulebb-rust REST API"

[[bin]]
name = "emulebb-rust-ui"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
slint.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }

[build-dependencies]
slint-build.workspace = true
